Add MQTT interface

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 version: '3'
 services:
-  url:
+  ubicoustics:
      image: ubicoustics:latest
      container_name: ubicoustics
      environment:
        - MICROPHONE_INDEX=0  # change to a mic that's available (check docker logs)
-     restart: always
+       - CONTEXT=everything  # optional
      devices:
        - "/dev/snd:/dev/snd"
+     restart: always
